--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
             <artifactId>spark-core_${scala.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-yarn_${scala.version}</artifactId>
             <version>${spark.version}</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_${scala.version}</artifactId>
@@ -35,7 +35,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.27</version>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive_${scala.version}</artifactId>
             <version>3.0.0</version>
@@ -45,7 +45,8 @@
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-exec</artifactId>
             <version>1.2.1</version>
-        </dependency>-->
+        </dependency>
+
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_${scala.version}</artifactId>
